sap-s4hana-soap/2.0/modules/ROOT/pages/sap-s4hana-soap-connector-reference.adoc
= SAP S/4HANA SOAP Cloud Connector Reference




SAP S/4HANA SOAP Cloud v2.0

The main class of an extension is the entry point from which configurations, connection providers, operations, and sources are declared.


== Configurations
---
[[Config]]
=== Config


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<Config_BasicAuthentication, Basic Authentication>>
* <<Config_Oauth2ClientCredentialsAuthentication, Oauth2 Client Credentials Authentication>>
 | The connection types to provide to this configuration. | | x
| Connection timeout a| Number |  Connection timeout for the request |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the Timeout configurations |  SECONDS |
| Encoding a| String |  Default character encoding to use in all the messages. If not specified, the default charset in the mule configuration will be used |  |
| Name a| String |  The identifier of this element used to reference it in other components |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[Config_BasicAuthentication]]
===== Basic Authentication

Basic authentication is the simplest way of enforcing access controls because it does not require cookies, session identifiers, or login pages. Instead, it uses standard fields in the HTTP header, removing the need for handshakes. This mechanism provides no confidentiality protection for the transmitted credentials. They are merely encoded with Base64 in transit, but not encrypted or hashed in any way.


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Service base URL a| String |  The base URL of the service on SAP S/4HANA to be accessed from the connector. |  | x
| Username a| String |  The account username with which to log in to SAP S/4HANA. |  | x
| Password a| String |  The account password with which to log in to SAP S/4HANA. |  | x
| Discovery Service Enabled a| Boolean |  Enables automatic service discovery |  true |
| Discovery Service Path a| String |  URL to use for automatic services discovery |  /sap/bc/srt/wsil_ext |
| Service directory a| String |  Common HTTP directory for all SAP services |   |
| Unlisted services a| Array of String |  List of services that will be added to the list of discovered services |  |
| Service discovery resolution timeout a| Number |  Connection timeout for service discovery |  30 |
| Service Discovery Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the Timeout configuration |  SECONDS |
| Default HTTP headers a| Object | Default HTTP headers to include in the message. |  |
| Default query parameters a| Object | Default query parameters to include in the request. |  |
| Proxy configuration a| <<ProxyConfiguration>> |  Proxy configuration for the connector. |  |
| TLS configuration a| <<Tls>> |  Protocol to use for communication. Valid values are HTTP and HTTPS. When using HTTPS the HTTP communication is secured using TLS or SSL. If HTTPS was configured as the protocol then the user needs to configure at least the keystore in the `tls:context` child element of this `listener-config`. | HTTP |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[[Config_Oauth2ClientCredentialsAuthentication]]
===== OAuth 2.0 Client Credentials Authentication

OAuth 2.0 authentication provides a secure way of authenticating against the resource using the provided client ID and client secret. Authentication is ensured using an access token generated by the resource. The generated token has a limited lifespan and is automatically refreshed by initiating a refresh dance, after the token expires.

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Service base URL a| String |  The base URL of the SAP S/4HANA SOAP service to access from the connector |  | x
| Discovery Service Enabled a| Boolean | Enables automatic service discovery |  true |
| Discovery Service Path a| String | URL to use for automatic services discovery |  `/sap/bc/srt/wsil_ext` |
| Service directory a| String |  Common HTTP directory for all SAP services |   |
| Unlisted services a| Array of String a| List of services that will be added to the list of discovered services, for example: `/sap/bc/srt/wsdl_ext/flv_10002S111AD1/srvc_url/sap/bc/srt/scs_ext/sap/creditmanagementaccountbyidqu1` +
If the `Service directory` parameter is not specified, then the HTTP directory needs to be prepended before every service name in this list, in the following format: {directory}/{service-name}. |  |
| Service discovery resolution timeout a| Number | Connection timeout for service discovery |  30 |
| Service Discovery Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the Timeout configuration |  SECONDS |
| Default HTTP headers a| Object |  Default HTTP headers the message should include |  |
| Default query parameters a| Object |  Default Query parameters the request should include |  |
| Proxy configuration a| <<ProxyConfiguration>> | Proxy configuration for the connector |  |
| TLS configuration a| <<Tls>> |  Protocol to use for communication. Valid values are HTTP and HTTPS. When using HTTPS, the HTTP communication is secured using TLS or SSL. If HTTPS was configured as the protocol, then the user needs to configure at least the keystore in the `tls:context child` element of this `listener-config`. | HTTP |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Client Id a| String | The OAuth client ID as registered with the service provider |  | x
| Client Secret a| String | The OAuth client secret as registered with the service provider |  | x
| Token Url a| String |  The service provider's token endpoint URL |  `\https://{host-name}/{oauth-service}/{generate-token-resource}` |
| Scopes a| String |  The OAuth scopes requested during the dance. If not provided, it defaults to those in the annotation. |  |
| Object Store a| String |  A reference to the object store used to store each resource owner ID's data. If not specified, the default one is provisioned automatically by Mule. |  |
|===

== Supported Operations
* <<Invoke>>
* <<Unauthorize>>


== Operations

[[Invoke]]
== Invoke
`<s4hana-soap:invoke>`

Consumes an operation from an S/4HANA SOAP Web Service.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component |  | x
| Service name a| String |  Name of the service |  | x
| Operation name a| String |  The operation name of the service |  | x
| Message a| Binary |  The content of the message. |  #[payload] |
| Connection timeout a| Number |  Connection timeout for the request |  |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit to use in the Timeout configurations |  |
| Custom HTTP headers a| Object |  Custom headers that the request will include. The headers specified here will be merged with the default headers specified in the configuration. |  |
| Custom query parameters a| Object | Custom query parameters that the request will include. The query parameters specified here will be merged with the default query parameters specified in the config. |  |
| Target Variable a| String |  The name of a variable in which to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |<<SoapOutputEnvelope>>
| Attributes Type a| <<SoapAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* S4HANA-SOAP:CONNECTIVITY
* S4HANA-SOAP:PROCESSING_ERROR
* S4HANA-SOAP:RETRY_EXHAUSTED

[[Unauthorize]]
== Unauthorize
`<s4hana-soap:unauthorize>`

Deletes all the access token information of a given resource owner ID so that it's impossible to execute any operation for that user without repeating the authorization dance.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
|===

=== For Configurations

* <<Config>>

== Types
[[ProxyConfiguration]]
=== Proxy Configuration

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Host where the proxy requests is sent |  | x
| Port a| Number | Port where the proxy requests is sent |  | x
| Username a| String | The username to authenticate against the proxy |  |
| Password a| String | The password to authenticate against the proxy |  |
| Non Proxy Hosts a| Array of String | A list of hosts against which the proxy should not be used |  |
| Ntlm Domain a| String | The domain to authenticate against the proxy |  |
|===

[[Tls]]
=== TLS

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> |  |  |
|===

[[TrustStore]]
=== Truststore

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system if possible) of the truststore |  |
| Password a| String | The password used to protect the truststore |  |
| Type a| String | The type of store used |  |
| Algorithm a| String | The algorithm used by the truststore |  |
| Insecure a| Boolean | If `true`, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Keystore

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system if possible) of the keystore. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the keystore contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the keystore. |  |
| Algorithm a| String | The algorithm used by the keystore. |  |
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before) |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy |  |
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the truststore) if present |  |
|===

[[CrlFile]]
=== CRL File

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file |  |
|===

[[Reconnection]]
=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | The reconnection strategy to use. |  |
|===

[[Reconnect]]
=== Reconnect

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Blocking a| Boolean | If `false`, the reconnection strategy will run in a separate, non-blocking thread |  |
| Count a| Number | How many reconnection attempts to make |  |
|===

[[ReconnectForever]]
=== Reconnect Forever

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Blocking a| Boolean | If `false`, the reconnection strategy will run in a separate, non-blocking thread |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance can be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[SoapOutputEnvelope]]
=== SOAP Output Envelope

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Attachments a| Object |  |  |
| Body a| Binary |  |  |
| Headers a| Object |  |  |
|===

[[SoapAttributes]]
=== SOAP Attributes

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Transport Additional Data a| Object |  |  |
| Transport Headers a| Object |  |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
